[package]
name = "RingBuffer"
description = "Structs for network transmit and receive buffers"
version = "0.1.0"
authors = ["Ethan Mathieu <ethan.mathieu@yale.edu>"]

[dependencies]
owning_ref = { git = "https://github.com/theseus-os/owning-ref-rs" }
mpmc = "0.1.6"

[dependencies.memory]
path = "../memory"

[dependencies.irq_safety]
git = "https://github.com/theseus-os/irq_safety"


[dependencies.intel_ethernet]
path = "../intel_ethernet"


[dependencies.nic_queues]
path = "../nic_queues"

[dependencies.nic_buffers]
path = "../nic_buffers"

[dependencies.ethernet_smoltcp_device]
path = "../ethernet_smoltcp_device"


[dependencies.smoltcp]
version = "0.5.0"
default-features = false
features = [
    "alloc", "ethernet",
    # "log", "verbose", 
    "proto-ipv4", "proto-igmp", "proto-ipv6", "proto-dhcpv4",
    "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", 
]

[dependencies.network_manager]
path = "../network_manager"

[dependencies.log]
version = "0.4.8"

[lib]
crate-type = ["rlib"]
