[package]
authors = ["Ramla Ijaz <ijazramla@gmail.com>"]
name = "fastpath_ipc"
description = "An unsafe version of IPC that that copies the seL4 fastpath"
version = "0.1.0"
build = "../../build.rs"

[dependencies]
bit_field = "0.7.0"
spin = "0.4.10"
volatile = "0.2.5"


[dependencies.log]
version = "0.4.8"

[dependencies.pmu_x86]
path = "../pmu_x86"

[dependencies.task]
path = "../task"

[dependencies.scheduler]
path = "../scheduler"

[dependencies.irq_safety]
git = "https://github.com/kevinaboos/irq_safety"

[lib]
crate-type = ["rlib"]
