[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "network_interface_card"
description = "A set of abstractions for a Network Interface Card"
version = "0.1.0"
build = "../../build.rs"

[dependencies]

[dependencies.nic_buffers]
path = "../nic_buffers"


[dependencies.dma_buffers]
path = "../dma_buffers"

[lib]
crate-type = ["rlib"]
